test/error/E5.chigfn
{
	"type": "function",
	"name": "helloworld",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"local_variables": {}
}
